scripts/development/k8s/tektoncd-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "http"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: tekton-dashboard
      port:
        name: webinterface
  tls:
  - hosts:
    - "dashboard.localhost"
    secretName: tls-tekton-dashboard
  rules:
  - host: "dashboard.localhost"
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              name: http
        pathType: ImplementationSpecific
